--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,13 +1,7 @@
-<%= form_for @post, :html => {:multipart => true} do |f| %>
+<%= form_for @post do |f| %>
  Title:<br /> <%= f.text_field :title %><br />
  Price:<br /> <%= f.text_field :price %><br />
  Description:<br /> <%= f.text_area :description %><br />
- 	<%= f.fields_for :images do |image| %>
-      Select Images: <%= image.file_field :image_file, multiple: true, name: "image[image_file]" %>
-  <% end %>
-
- 
-
- <%#= f.submit 'Submit', :class => 'btn btn-primary'%>
-
+ <%= f.submit 'Submit', :class => 'btn btn-primary'%>
+ <%= link_to 'Back', posts_path %>
 <% end %>
