--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,22 @@
 <h4><%= @post.price %></h4>
 <%= simple_format(@post.description) %>
 
-<% @post.images.each do |image| %>
-	<%= image_tag image.image_file_url %>
-<% end %>
 <%= link_to 'edit', edit_post_path(@post) %>
 
 <%= link_to 'upload photos', new_post_image_path(@post) %>
 <%= link_to 'delete', @post, method: :delete, data: { confirm: "Are you sure?" } %>
+
+<div class="row-fluid">
+	<div class="container">
+	  <ul class="thumbnails">
+	    <% @post.images.each do |pic| %>
+	     	<li class="span3">
+	     		<%= link_to image_tag(pic.image_file.url(:thumb).to_s), pic.image_file_url, rel: 'shadowbox[gallery]' %>	
+					
+
+					<%= link_to 'Remove', post_image_path(@post, pic.id), :confirm => "Delete this photo?", :method => 'delete' %>
+				</li>
+	    <% end %>
+	  </ul>
+	</div>
+</div>
