restrict views to check for logged in users/authors of posts

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -43,7 +43,7 @@ body > #container { height: auto; min-height: 100%; }
 
 .navbar .btn-group {
 	margin-top: 0px;
-  float: right;
+  display: inline;
 }
 
 .navbar-fixed-top {
