add user id to posts on create working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
 				  	<button class="btn"><%= link_to "Log Out", logout_path(current_user) %></button>
 				  <% else %>
 				  <div class="btn-group">
-					  <button class="btn"><%= link_to "Post Ad", new_post_path %></button>
+					  <button class="btn"><%= link_to "Post Ad", signup_path %></button>
 				  	<button class="btn"><%= link_to "Login", login_path %></button>
 				  	<button class="btn"><%= link_to "Register", signup_path %></button>
 				  <% end %>	
