--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-info {
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.user-profile h2{
+	display: inline;
+}
+
+.user-profile .btn{
+	margin-bottom: 10px;
+	margin-left: 10px;
+}
