--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container">
 		  <div class="navbar-inner">
-		    <a class="brand" href="/"><%= image_tag "logo.png", :alt => "Heavy Peddler" %></a>
+		    <a class="brand" href="/"><%= image_tag "hplogo.png", :alt => "Heavy Peddler" %></a>
 		    <!-- <ul class="nav">
 		      <li class="active"><a href="#">Forums</a></li>
 		      <li><a href="#">About</a></li>
