--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,7 @@
 
 	
 	<%= f.text_field :fname, :class => 'input-medium', :placeholder => 'first name' %><br />
+ 	<%= f.text_field :lname, :class => 'input-medium', :placeholder => 'last name' %><br />
  	<%= f.text_field :email, :class => 'input-medium', :placeholder => 'email address' %><br />
  	<%= f.password_field :password, :class => 'input-medium', :placeholder => 'password' %><br />
  	<%= f.password_field :password_confirmation, :class => 'input-medium', :placeholder => 're-enter password' %><br />
