--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
-<div class="user-profile">
-	<h2>Your Profile</h2><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn" %>
-</div>
+<% if @user.id == session[:user_id] %> <!-- if logged in and user id matches logged in id. What is a better way to do this? -->
 
-
-<div class="user-info">
-	Name: <%= @user.fname %><br />
-	Email address: <%= @user.email %><br />
-</div>	
-
+	<div class="user-profile">
+		<h2>Your Profile</h2><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn" %>
+	</div>
+	<div class="user-info">
+		Name: <%= @user.fname %><br />
+		Email address: <%= @user.email %><br />
+	</div>	
+<% end %>
 
 <%= render "listings" %>
