--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for @post do |f| %>
-	
- 	<%= f.collection_select :category_id, @categories, :id, :name %><br />
+	<!-- need a fake pulldown here to submit the Type to update Post -->
+
+	<%= f.select :adtype, options_for_select([['For Sale', 0], ["Wanted", 1], ["Trades", 2]]) %><br />
+ 	<%= f.collection_select :category_id, @categories, :id, :name, :prompt => 'Select Category' %><br />
  	<%= f.text_field :title, :class => 'input-xxlarge', :placeholder => 'Title' %><br />
  	<%= f.text_field :price, :class => 'input-medium', :placeholder => 'Price' %><br />
  	<%= f.text_area :description, :rows => '10', :class => 'input-xxlarge', :placeholder => 'Description' %><br />
