--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -104,7 +104,7 @@ body > #container { height: auto; min-height: 100%; }
   padding-top: 10px;
 }
 
-.row-fluid .span8 {
+.span8 {
   margin-left: 0px;
 }
 
