--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<% if @user.id == session[:user_id] %> <!-- if logged in and user id matches logged in id. What is a better way to do this? -->
+<% if correct_user? %> <!-- if logged in and user id matches logged in id. What is a better way to do this? -->
 
 	<div class="user-profile">
 		<h2>Your Profile</h2><%= link_to "Edit Profile", edit_user_path(current_user), class: "btn" %>
