--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
 			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
 			      <% end %>
 			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => "$") %></h6>
+			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			  <% end %>    
 			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
 			    </div>
@@ -30,7 +30,7 @@
 			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
 			      <% end %>
 			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => "$") %></h6>
+			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			  <% end %>    
 			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
 			    </div>
@@ -50,7 +50,7 @@
 			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
 			      <% end %>
 			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => "$") %></h6>
+			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			  <% end %>    
 			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
 			    </div>
@@ -70,7 +70,7 @@
 			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
 			      <% end %>
 			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => "$") %></h6>
+			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
 			  <% end %>    
 			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
 			    </div>
