WIP jquery file upload progress bar

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -4,6 +4,10 @@
 	<%= f.file_field :image, multiple: :true, name: "image[image_file]" %>
 <% end %>
 
+<div id="progress" class="progress progress-success progress-striped">
+        <div class="bar"></div>
+    </div>
+
 <%= link_to "View Your Listing", post_path(@post), :class => 'btn' %> 
 
 <div id="post">
