--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -143,6 +143,22 @@ input::-webkit-inner-spin-button {
 	width: 100px;
 }
 
+#progress {
+	display:none;
+}
+
 .bar {
 	width: 0;
+	height: 18px;
+  background: green;
+}
+
+.hidden-upload {
+	overflow: hidden;
+}
+
+#image_image {
+	opacity: 0;
+	position: absolute;
+	left: -1000px;
 }
