edit/delete in user listings; status WIP

--- a/app/views/users/_listings.html.erb
+++ b/app/views/users/_listings.html.erb
@@ -7,6 +7,12 @@
 					<%= link_to post.title, post_path(post) %>
 					<%#= post.created_at.to_s %>
 					<%= Date.strptime(post.created_at.to_s, "%Y-%m-%d %H:%M:%S %Z").strftime("%m/%d/%Y") %>
+					<%= link_to "Edit", edit_post_path(post), :class => "btn btn-mini" %>
+					<%= link_to "Sold", post_path(post, :status => 1), :method => :put, :class => "btn btn-mini"  %>
+					
+
+
+					<%= link_to 'delete', post_path(post), method: :delete, :class => 'btn btn-mini btn-danger', data: { confirm: "Are you sure?" } %>
 				</li>
 			</ul>
 		<% end %>
