status buttons on listings and fix image resizer on upload

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -6,6 +6,14 @@
 	padding: 0;
 }
 
+.marked-sold {
+	background-color: #cfcfcf;
+	padding: 5px;
+	font-style: italic;
+	font-weight: bold;
+}
+
+
 footer {
 	 clear: both;
 	 color: #666;
