--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -11,8 +11,10 @@
 
 	<div class="container">
 		<div class="span3">
-			<div class="title">Most Viewed</div>
-				<%#= image_tag Post.first.images.order('created_at DESC').first.image_file_url(:thumb).to_s %>
+			<div class="title">Just Listed</div>
+				<% if Post.first.has_image? %>
+					<%= image_tag Post.first.images.order('created_at DESC').first.image_file_url(:thumb).to_s %>
+				<% end %>
 	</ul>
 		</div>
 
