--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,86 +2,29 @@
 	
 	<ul class="thumbnails">
 	  <% @posts.each do |post| %>
+		  <% if post.status == 0 %>
 		  <li>
-		  	<!-- how to do this with link_to? -->
 		    <%= link_to post_path(post) do %>
-		    	<div class="thumbnail">
-			      <% if post.has_image? %>
-			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
-				      <h5><%= truncate(post.title, :length => 22) %></h5>
-				      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
-			      <% else %>
-				      <%= image_tag "placeholder-thumbnail.gif", :alt => "missing image" %>
-				      <h5><%= truncate(post.title, :length => 22) %></h5>
-				      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
-				     <% end %> 
-			  <% end %>    
+			    	<div class="thumbnail">
+				      <% if post.has_image? %>
+				      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
+					      <h5><%= truncate(post.title, :length => 22) %></h5>
+					      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
+				      <% else %>
+					      <%= image_tag "placeholder-thumbnail.gif", :alt => "missing image" %>
+					      <h5><%= truncate(post.title, :length => 22) %></h5>
+					      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
+					    <% end %> 
+				  <% end %>    
 			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
 			    </div>
+			  <% end %>  
 			  
 		  </li>
 		<% end %>
 	</ul>
 
-<h2>For Sale only:</h2>
-<ul class="thumbnails">
-	  <% @forsale.each do |post| %>
-		  <li>
-		  	<!-- how to do this with link_to? -->
-		    <%= link_to post_path(post) do %>
-		    	<div class="thumbnail">
-			      <% if post.images.exists? %>
-			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
-			      <% end %>
-			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
-			  <% end %>    
-			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
-			    </div>
-			  
-		  </li>
-		<% end %>
-	</ul>
 
-<h2>Wanted only:</h2>
-<ul class="thumbnails">
-	  <% @wanted.each do |post| %>
-		  <li>
-		  	<!-- how to do this with link_to? -->
-		    <%= link_to post_path(post) do %>
-		    	<div class="thumbnail">
-			      <% if post.images.exists? %>
-			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
-			      <% end %>
-			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
-			  <% end %>    
-			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
-			    </div>
-			  
-		  </li>
-		<% end %>
-	</ul>
-
-<h2>Trade only:</h2>
-<ul class="thumbnails">
-	  <% @trade.each do |post| %>
-		  <li>
-		  	<!-- how to do this with link_to? -->
-		    <%= link_to post_path(post) do %>
-		    	<div class="thumbnail">
-			      <% if post.images.exists? %>
-			      	<%= image_tag post.images.order('created_at ASC').first.image_file_url(:thumb).to_s %>
-			      <% end %>
-			      <h5><%= truncate(post.title, :length => 22) %></h5>
-			      <h6><%= number_to_currency( post.price, :unit => currency_type(post.currency)) %></h6>
-			  <% end %>    
-			      <!-- <p><%#= sanitize(truncate(post.description), :length => 50) %> -->
-			    </div>
-			  
-		  </li>
-		<% end %>
-	</ul>
 
 	<div class="pagination pagination-small pagination-centered">
   <ul>
