--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -36,7 +36,7 @@
 					<ul>
 						<li><a href="#">About</a></li>
 						<li><a href="#">Contact</a></li>
-						<li><a href="#">Blog</a></li>
+						<li><a href="http://bryanus.tumblr.com" target="_blank">Blog</a></li>
 						<li><a href="#">Terms of Use</a></li>
 					</ul>
 				</div>
