working ajax search results

--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -14,6 +14,6 @@
 
 	<%= link_to "View Your Listing", post_path(@post), :id => 'view-listing', :class => 'btn' %> 
 
-<div id="post">
+<div id="post_images">
 	<%= render 'post_images' %>
 </div>
