--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
 	
-	<div id="posts"><%= render "posts" %></div>
+	<div id="posts"><%= render "posts" %>
+	
+
+	</div>
 
 
-
-	<%= will_paginate @posts, :class => 'pagination pagination-small pagination-centered' %>
 
 	
 
